--- a/USER_SERVICE/src/main/resources/application.properties
+++ b/USER_SERVICE/src/main/resources/application.properties
@@ -5,7 +5,7 @@ springdoc.api-docs.path=/api-docs
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username= postgres
-spring.datasource.password= root
+spring.datasource.password= 2921
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQLDialect
