--- a/API_GATEWAY_SERVICE/src/main/resources/application.yml
+++ b/API_GATEWAY_SERVICE/src/main/resources/application.yml
@@ -9,4 +9,4 @@ spring:
         -  id: USER-SERVICE
            uri: http://localhost:7000
            predicates:
-            - Path=/api/v1/user/** 
+            - Path=/api/v1/** 
