new service for attendance service and integrate attendance service in api getway

--- a/API_GATEWAY_SERVICE/src/main/resources/application.yml
+++ b/API_GATEWAY_SERVICE/src/main/resources/application.yml
@@ -6,7 +6,11 @@ spring:
   cloud:
     gateway:  
       routes:
+        -  id: ATTENDANCE-SERVICE
+           uri: http://localhost:7001
+           predicates:
+            - Path=/** 
         -  id: USER-SERVICE
            uri: http://localhost:7000
            predicates:
-            - Path=/api/v1/** 
+            - Path=/**
